--- a/package.json
+++ b/package.json
@@ -1,27 +1,45 @@
 {
-  "name": "Massa",
+  "name": "MASSA",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "react-native-scripts": "1.8.1",
-    "jest-expo": "23.0.0",
-    "react-test-renderer": "16.0.0"
-  },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
+    "postinstall": "rm -rf node_modules/react-navigation/{node_modules,examples}",
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "test": "node node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "expo": "^23.0.4",
+    "expo": "^24.0.2",
     "react": "16.0.0",
-    "react-native": "0.50.3",
-    "react-native-icon": "^0.2.10"
+    "react-native": "^0.51.0",
+    "react-navigation": "^1.0.0-beta.23"
+  },
+  "devDependencies": {
+    "babel-jest": "^21.0.0",
+    "flow-bin": "^0.56.0",
+    "jest": "^21.0.1",
+    "jest-expo": "^24.0.0",
+    "react-native-scripts": "^1.5.0",
+    "react-test-renderer": "16.0.0"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "jsx",
+      "node"
+    ],
+    "modulePathIgnorePatterns": [
+      "/node_modules/.*/react-native/",
+      "/node_modules/.*/react/"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react-native|react-navigation)/"
+    ]
   }
 }
